# portcullis

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  action.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_app.yml
.github/action/: summarize.py
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml  scorecard.yml
docs/: checks.md  ci.md  exposure-model.md  json-schema.md  rule-packs.md
examples/demo-stack/: .env.example  README.md  docker-compose.yml
examples/rule-packs/homelab-extras/: watchtower.yaml
src/portcullis/: __init__.py  __main__.py  cli.py  discovery.py  exposure.py  history.py  model.py  patches.py  probe.py  scanner.py  scoring.py  trivy.py
src/portcullis/kb/: __init__.py
src/portcullis/kb/data/apps/: actualbudget.yaml  adguard-home.yaml  audiobookshelf.yaml  authelia.yaml  authentik.yaml  bazarr.yaml  bookstack.yaml  calibre-web.yaml  changedetection-io.yaml  code-server.yaml  dashy.yaml  duplicati.yaml  elasticsearch.yaml  esphome.yaml  filebrowser.yaml  (+77 more)
src/portcullis/parsers/: __init__.py  _common.py  caddy.py  compose.py  nginx.py  traefik.py
src/portcullis/report/: __init__.py  html.py  interactive.py  json.py  markdown.py  terminal.py
src/portcullis/rules/: __init__.py  base.py  footguns.py  packs.py
tests/: test_action_summarize.py  test_caddy.py  test_cli.py  test_compose_completeness.py  test_compose_parser.py  test_discovery.py  test_exposure.py  test_footguns.py  test_html_report.py  test_interactive_report.py  test_json_report.py  test_kb.py  test_nginx.py  test_patches.py  test_probe.py  test_rule_packs.py  test_scoring.py  test_traefik.py  test_trivy.py
