[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portcullis"
version = "0.1.0.dev0"
description = "Security auditor for self-hosted infrastructures - see what your stack really exposes to the Internet, and how to fix it."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "yakohhhh" }]
keywords = [
    "security",
    "self-hosting",
    "homelab",
    "docker-compose",
    "audit",
    "devsecops",
    "reverse-proxy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
portcullis = "portcullis.cli:main"

[project.urls]
Homepage = "https://github.com/yakohhhh/portcullis"
Repository = "https://github.com/yakohhhh/portcullis"
Issues = "https://github.com/yakohhhh/portcullis/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/portcullis"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
